# medical-scribe

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  transcribe.py
.claude/: settings.json
clinical_ai/: asr.py  llm.py  prompts.py
docs/superpowers/plans/: 2026-04-18-streamlit-soap-pipeline.md
medical_scribe/: __init__.py  device.py  llm.py  prompts.py  soap_sections.py  vad.py
tests/: test_app.py  test_asr.py  test_device.py  test_init.py  test_integration.py  test_llm.py  test_prompts.py  test_soap_sections.py  test_transcribe.py  test_vad.py
