[project]
name = "medical-scribe"
version = "0.5.0"
description = "Local-first pipeline for Apple Silicon: VAD-trimmed MedASR transcription + MedGemma SOAP-note drafts."
requires-python = ">=3.10,<3.13"
dependencies = [
    # ML / inference. transformers pinned to a v5.0+ commit — MedASR isn't compatible
    # with the v4.x line currently on PyPI.
    "transformers @ git+https://github.com/huggingface/transformers.git@65dc261512cbdb1ee72b88ae5b222f2605aad8e5",
    "torch>=2.1.0",
    "accelerate>=0.30.0",
    "mlx-lm>=0.29,<1",
    # Pre-ASR silence trimming. ~2 MB JIT model; runs on MPS via the existing torch dep.
    "silero-vad>=6.0",

    # Audio I/O
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",

    # Config / UI
    "python-dotenv>=1.0.0",
    "streamlit>=1.39",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "ty>=0.0.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[tool.uv]
# Application, not a library — don't build medical_scribe as a wheel.
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"medical_scribe/prompts.py" = ["E501"]

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # so tests can `from app import ...` (app.py lives at the repo root)
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: hits real models or network; opt-in via -m integration",
]

[tool.coverage.run]
source = ["medical_scribe"]
